--- a/index.html
+++ b/index.html
@@ -1,46 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="CSS Styling">
-
-  <!-- Links the CSS file to the HTML file -->
-  <link rel="stylesheet" href="style.css">
-
-  <title>CSS Styling</title>
-  
-  <!-- Style Tag/Element (Better than Inline Styling, but still clutters up the HTML file.) -->
-  <style>
-    /* Style Tags/Elements allow for CSS to be written in an HTML file just like they would be in a CSS file. */
-    /* h1 {
-      color: yellow;
-    }
-
-    li {
-      background-color: tomato;
-    } */
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="colorsExercise.css">
+    <title>CSS Colors Exercise</title>
 </head>
 <body>
-  <h1>FAVORITES</h1>
-
-  <h2>Favorite Movies</h2>
-  <ul>
-    <!-- Inline Styling (Not the best way. Try not to use this.) -->
-    <!-- <li style="color: teal;">Avengers Endgame</li> -->
-    <!-- <li style="color: cadetblue;">Avengers Endgame</li> -->
-    <li>The Dark Knight</li>
-  </ul>
-
-  <h3>Favorite Sports Teams</h3>
-  <ul>
-    <li>Chicago Bears</li>
-    <li>Chicago Cubs</li>
-    <li>Chicago Bulls</li>
-    <li>Chicago Blackhawks</li>
-    <li>Notre Dame Fighting Irish</li>
-  </ul>
+    <h1>Somewhere</h1>
+    <h2>Over</h2>
+    <h3>The</h3>
+    <h4>Rainbow</h4>
+    <h5>Way</h5>
+    <h6>Up</h6>
+    <p>High</p>
+    <ol>
+        <li id="one" class="bird">One</li>
+        <li>Two<Tw/li>
+        <li id="tres" class="bird">Three</li>
+    </ol>
+    
 </body>
 </html>
